--- a/etc/operator/config/crd/clairs.clairproject.org.yaml
+++ b/etc/operator/config/crd/clairs.clairproject.org.yaml
@@ -23,16 +23,6 @@ spec:
           spec:
             description: ClairSpec describes the desired state of a Clair instance.
             properties:
-              configDialect:
-                description: |-
-                  ConfigDialect specifies the format to generate for the main config.
-
-                  This setting affects what format config drop-ins must be in.
-                enum:
-                - json
-                - yaml
-                nullable: true
-                type: string
               databases:
                 description: Databases indicates the Secret keys holding config drop-ins that services should connect to.
                 nullable: true
@@ -148,27 +138,74 @@ spec:
                   If unspecified, services will need to have their routing set up manually.
                 nullable: true
                 properties:
-                  gatewayClassName:
+                  group:
                     description: |-
-                      Gateway_class_name is the GatewayClass to use.
+                      Group is the group of the referent.
 
-                      If not provided, one will be guessed at.
+                      When unspecified, "gateway.networking.k8s.io" is inferred. To set the core API group (such as for a "Service" kind referent), Group must be explicitly set to "" (empty string).
+
+                      Support: Core MaxLength: 253 Pattern: ^$\|^[a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*$
+                    maxLength: 253
+                    nullable: true
+                    pattern: ^$\|^[a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*$
+                    type: string
+                  kind:
+                    description: |-
+                      Kind is kind of the referent.
+
+                      There are two kinds of parent resources with "Core" support:
+
+                      - Gateway (Gateway conformance profile) - Service (Mesh conformance profile, ClusterIP Services only)
+
+                      Support for other resources is Implementation-Specific.
+
+                      MaxLength: 63 MinLength: 1 Pattern: ^[a-zA-Z]([-a-zA-Z0-9]*[a-zA-Z0-9])?$
+                    maxLength: 253
+                    minLength: 1
+                    nullable: true
+                    pattern: ^[a-zA-Z]([-a-zA-Z0-9]*[a-zA-Z0-9])?$
+                    type: string
+                  name:
+                    description: |-
+                      Name is the name of the referent.
+
+                      Support: Core MaxLength: 253 MinLength: 1
+                    maxLength: 253
+                    minLength: 1
+                    type: string
+                  namespace:
+                    description: |-
+                      Namespace is the namespace of the referent.
+
+                      When unspecified, this refers to the local namespace of the Route.
+
+                      Note that there are specific rules for ParentRefs which cross namespace boundaries. Cross-namespace references are only valid if they are explicitly allowed by something in the namespace they are referring to. For example: Gateway has the AllowedRoutes field, and ReferenceGrant provides a generic way to enable any other kind of cross-namespace reference.
+
+                      ParentRefs from a Route to a Service in the same namespace are "producer" routes, which apply default routing rules to inbound connections from any namespace to the Service. ParentRefs from a Route to a Service in a different namespace are "consumer" routes, and these routing rules are only applied to outbound connections originating from the same namespace as the Route, for which the intended destination of the connections are a Service targeted as a ParentRef of the Route.
+
+                      Support: Core MaxLength: 63 MinLength: 1 Pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?$
+                    maxLength: 63
+                    minLength: 1
+                    nullable: true
+                    pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?$
+                    type: string
+                  sectionName:
+                    description: |-
+                      SectionName is the name of a section within the target resource.
+
+                      In the following resources, SectionName is interpreted as the following:
+
+                      - Gateway: Listener name. When both Port (experimental) and SectionName are specified, the name and port of the selected listener must match both specified values. - Service: Port name. When both Port (experimental) and SectionName are specified, the name and port of the selected listener must match both specified values.
+
+                      Implementations MAY choose to support attaching Routes to other resources. If that is the case, they MUST clearly document how SectionName is interpreted.
+
+                      When unspecified (empty string), this will reference the entire resource. For the purpose of status, an attachment is considered successful if at least one section in the parent resource accepts it. For example, Gateway listeners can restrict which Routes can attach to them by Route kind, namespace, or hostname. If 1 of 2 Gateway listeners accept attachment from the referencing Route, the Route MUST be considered successfully attached. If no Gateway listeners accept attachment from this Route, the Route MUST be considered detached from the Gateway.
+
+                      Support: Core
                     nullable: true
                     type: string
-                  hostname:
-                    description: Hostname indicates the desired hostname.
-                    nullable: true
-                    type: string
-                  tls:
-                    description: TLS inicates the `kubernetes.io/tls`-typed Secret that should be used.
-                    nullable: true
-                    properties:
-                      name:
-                        description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names'
-                        type: string
-                    required:
-                    - name
-                    type: object
+                required:
+                - name
                 type: object
                 x-kubernetes-validations: []
               image:
@@ -305,29 +342,12 @@ spec:
                 - root
                 type: object
                 x-kubernetes-validations: []
-              currentVersion:
-                description: Current_version is the current verison of a deployed Clair instance.
+              image:
+                description: Image is the image that should be used in the managed deployment.
                 nullable: true
                 type: string
-              endpoint:
-                description: Endpoint is a reference to whatever object is providing ingress.
-                nullable: true
-                properties:
-                  apiGroup:
-                    description: APIGroup is the group for the resource being referenced. If APIGroup is not specified, the specified Kind must be in the core API group. For any other third-party types, APIGroup is required.
-                    type: string
-                  kind:
-                    description: Kind is the type of resource being referenced
-                    type: string
-                  name:
-                    description: Name is the name of resource being referenced
-                    type: string
-                required:
-                - kind
-                - name
-                type: object
               indexer:
-                description: Indexer is the Service for the Indexer component.
+                description: Indexer is the created Indexer component.
                 nullable: true
                 properties:
                   apiGroup:
@@ -344,7 +364,7 @@ spec:
                 - name
                 type: object
               matcher:
-                description: Matcher is the Service for the Matcher component.
+                description: Matcher is the created Matcher component.
                 nullable: true
                 properties:
                   apiGroup:
@@ -361,7 +381,7 @@ spec:
                 - name
                 type: object
               notifier:
-                description: Notifier is the Service for the Notifier component.
+                description: Notifier is the created Notifier component.
                 nullable: true
                 properties:
                   apiGroup:
@@ -377,10 +397,6 @@ spec:
                 - kind
                 - name
                 type: object
-              previousVersion:
-                description: Previous_version is the previous verison of a deployed Clair instance, if any.
-                nullable: true
-                type: string
               refs:
                 description: Refs holds on to references to objects needed by this instance.
                 items:
