--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -22,6 +22,11 @@ scopeguard = "1"
 signal-hook = "0.3"
 xshell = "0.2"
 
+[dependencies.kube]
+version = "0.99"
+default-features = false
+features = ["derive"]
+
 [dependencies.k8s-openapi]
 workspace = true
 features = ["earliest", "schemars"]
