all: replace gateway types with better-behaved ones
Signed-off-by: Hank Donnay <hdonnay@redhat.com>

--- a/clair_templates/Cargo.toml
+++ b/clair_templates/Cargo.toml
@@ -8,13 +8,13 @@ publish.workspace = true
 
 [dependencies]
 api = { path = "../api" }
+gateway_networking_k8s_io = { path = "../gateway_networking_k8s_io" }
 
 k8s-openapi.workspace = true
 kube-core.workspace = true
 serde_json.workspace = true
 serde.workspace = true
 
-kcr_gateway_networking_k8s_io = "1"
 thiserror = "2"
 
 [dependencies.strum]
