--- a/controller/Cargo.toml
+++ b/controller/Cargo.toml
@@ -18,6 +18,7 @@ test_ci = []
 api = { path = "../api" }
 clair_config = { path = "../clair_config" }
 clair_templates = { path = "../clair_templates" }
+gateway_networking_k8s_io = { path = "../gateway_networking_k8s_io" }
 
 clap.workspace = true
 futures.workspace = true
@@ -33,7 +34,6 @@ tracing.workspace = true
 anyhow = "1"
 bytes = "1"
 is-terminal = "0.4"
-kcr_gateway_networking_k8s_io = "1"
 openssl = "0.10"
 regex = "1"
 thiserror = "2"
