--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -7,18 +7,11 @@ authors.workspace = true
 publish.workspace = true
 
 [dependencies]
+k8s-openapi.workspace = true
+kube.workspace = true
 schemars.workspace = true
 serde_json.workspace = true
 serde.workspace = true
-
-[dependencies.kube]
-version = "0.99"
-default-features = false
-features = ["derive"]
-
-[dependencies.k8s-openapi]
-workspace = true
-features = ["schemars"]
 
 [dependencies.validator]
 version = "0.20"
