--- a/controller/Cargo.toml
+++ b/controller/Cargo.toml
@@ -23,6 +23,7 @@ gateway_networking_k8s_io = { path = "../gateway_networking_k8s_io" }
 clap.workspace = true
 futures.workspace = true
 json-patch.workspace = true
+kube.workspace = true
 metrics.workspace = true
 serde_json.workspace = true
 serde.workspace = true
@@ -56,11 +57,6 @@ features = ["clock", "serde"]
 [dependencies.k8s-openapi]
 workspace = true
 features = ["earliest"]
-
-[dependencies.kube]
-version = "0.99"
-default-features = false
-features = ["admission", "runtime", "client", "config", "openssl-tls", "gzip", "jsonpatch"]
 
 [dependencies.metrics-exporter-prometheus]
 version = "0.17"
