--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,8 @@ default-members = [
 license = "Apache-2.0"
 version = "0.1.0"
 authors = ["The clair-operator Authors"]
-edition = "2021"
-rust-version = "1.83"
+edition = "2024"
+rust-version = "1.85"
 publish = false
 
 [workspace.lints.rust]
@@ -64,7 +64,7 @@ features = ["schemars"]
 [workspace.dependencies.kube]
 version = "1.0"
 default-features = false
-features = ["runtime", "derive", "client", "config", "admission", "openssl-tls", "ws", "gzip", "jsonpatch"]
+features = ["admission", "client", "config", "derive", "gzip", "jsonpatch", "openssl-tls", "runtime", "ws"]
 
 [profile.dev]
 split-debuginfo = "unpacked"
