--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,14 +55,14 @@ clap = { version = "4", features = ["cargo", "env", "string"] }
 serde = { version = "1", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 tokio-stream = { version = "0.1", features = ["net", "signal"] }
-schemars = { version = "0.8", features = ["chrono"] }
+schemars = "1"
 
 [workspace.dependencies.k8s-openapi]
-version = "0.25"
+version = "0.27"
 features = ["schemars"]
 
 [workspace.dependencies.kube]
-version = "1.0"
+version = "3.0"
 default-features = false
 features = ["admission", "client", "config", "derive", "gzip", "jsonpatch", "openssl-tls", "runtime", "ws"]
 
