gateway: update gateway API bindings
Signed-off-by: Hank Donnay <hdonnay@redhat.com>

--- a/gateway_networking_k8s_io/Cargo.toml
+++ b/gateway_networking_k8s_io/Cargo.toml
@@ -6,6 +6,11 @@ edition.workspace = true
 authors.workspace = true
 publish.workspace = true
 
+# Prevent some warnings in the generated documentation.
+[lints.clippy]
+tabs_in_doc_comments = "allow"
+doc_lazy_continuation = "allow"
+
 [dependencies]
 k8s-openapi.workspace = true
 kube.workspace = true
