clippy: update lints
Signed-off-by: Hank Donnay <hdonnay@redhat.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ publish = false
 
 [workspace.lints.rust]
 arithmetic_overflow = "deny" # Prevent operations that would cause integer overflow
+unnecessary_transmutes = "deny" # Prevent unneeded transmutation
+
 [workspace.lints.clippy]
 checked_conversions = "deny" # Suggest using checked conversions between numeric types
 cast_possible_truncation = "deny" # Detect when casting might truncate a value
@@ -30,7 +32,7 @@ cast_possible_wrap = "deny" # Detect when casting might cause value to wrap arou
 cast_precision_loss = "deny" # Detect when casting might lose precision
 integer_division = "deny" # Highlight potential bugs from integer division truncation
 arithmetic_side_effects = "deny" # Detect arithmetic operations with potential side effects
-unchecked_duration_subtraction = "deny" # Ensure duration subtraction won't cause underflow
+unchecked_time_subtraction = "deny" # Ensure duration subtraction won't cause underflow
 #unwrap_used = "deny" # Discourage using .unwrap() which can cause panics
 #expect_used = "deny" # Discourage using .expect() which can cause panics
 panicking_unwrap = "deny" # Prevent unwrap on values known to cause panics
@@ -39,8 +41,6 @@ option_env_unwrap = "deny" # Prevent unwrapping environment variables which migh
 join_absolute_paths = "deny" # Prevent issues when joining paths with absolute paths
 serde_api_misuse = "deny" # Prevent incorrect usage of Serde's serialization/deserialization API
 uninit_vec = "deny" # Prevent creating uninitialized vectors which is unsafe
-transmute_int_to_char = "deny" # Prevent unsafe transmutation from integers to characters
-transmute_int_to_float = "deny" # Prevent unsafe transmutation from integers to floats
 transmute_ptr_to_ref = "deny" # Prevent unsafe transmutation from pointers to references
 transmute_undefined_repr = "deny" # Detect transmutes with potentially undefined representations
 
