--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,18 +44,21 @@ uninit_vec = "deny" # Prevent creating uninitialized vectors which is unsafe
 transmute_ptr_to_ref = "deny" # Prevent unsafe transmutation from pointers to references
 transmute_undefined_repr = "deny" # Detect transmutes with potentially undefined representations
 
+[workspace.lints.rustdoc]
+missing_crate_level_docs = "warn" # Warn if crates are missing documentation.
+
 [workspace.dependencies]
+clap = { version = "4", features = ["cargo", "env", "string"] }
 futures = "0.3"
 json-patch = "4"
 metrics = "0.24"
-serde_json = "1"
-serde_yaml = "0.9"
-tracing = "0.1"
-clap = { version = "4", features = ["cargo", "env", "string"] }
-serde = { version = "1", features = ["derive"] }
-tokio = { version = "1", features = ["full"] }
-tokio-stream = { version = "0.1", features = ["net", "signal"] }
 schemars = "1"
+serde_json = "1"
+serde = { version = "1", features = ["derive"] }
+serde_yaml = "0.9"
+tokio-stream = { version = "0.1", features = ["net", "signal"] }
+tokio = { version = "1", features = ["full"] }
+tracing = "0.1"
 
 [workspace.dependencies.k8s-openapi]
 version = "0.27"
@@ -80,7 +83,13 @@ lto = "thin"
 [workspace.metadata.controller.default]
 clair-image-tag = "nightly"
 [workspace.metadata.controller.release]
-clair-image-tag = "4.8.0"
+clair-image-tag = "4.9.0"
 
 [workspace.metadata.ci]
-kind-version = ['1.28']
+kind-version = "0.31.0"
+kube-version = "1.35.0"
+kustomize-version = "5.6.0"
+operator-sdk-version = "1.39.2"
+opm-version = "1.51.0"
+istio-version = "1.25.2"
+gateway-api-version = "1.2.1"
