--- a/clair_config/Cargo.toml
+++ b/clair_config/Cargo.toml
@@ -7,17 +7,25 @@ authors.workspace = true
 publish.workspace = true
 
 [dependencies]
-api = { path = "../api" }
-
 json-patch.workspace = true
-k8s-openapi.workspace = true
 serde_json.workspace = true
-serde_yaml.workspace = true
-tokio.workspace = true
+tracing.workspace = true
 
 libc = "0.2"
-tracing = "0.1"
+
+[dependencies.k8s-openapi]
+workspace = true
+optional = true
+
+[dependencies.tokio]
+workspace = true
+optional = true
+features = [ "macros", "rt" ]
 
 [build-dependencies]
 bindgen = "0.72"
-serde.workspace = true
+
+[features]
+default = []
+k8s = ["dep:k8s-openapi"]
+tokio = ["dep:tokio"]
