add generate task
Signed-off-by: Hank Donnay <hdonnay@redhat.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -89,6 +89,8 @@ kind-version = "0.31.0"
 kube-version = "1.35.0"
 kustomize-version = "5.6.0"
 operator-sdk-version = "1.39.2"
+operator-api-version = "0.39.0"
 opm-version = "1.51.0"
 istio-version = "1.25.2"
-gateway-api-version = "1.2.1"
+gateway-api-version = "1.4.1"
+kopium-version = "0.22.5"
